[metadata]

name = marrow.package
description = Plugin discovery and management, dependency graphing, and object import path canonicalization.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE.txt
author = Alice Bevan-McGregor
author_email = alice@gothcandy.com
url = https://github.com/marrow/package
project_urls =
	Source code = https://github.com/marrow/package
	Issue tracker = https://github.com/marrow/package/issues
keywords =
	entry point
	plugin
	extensions
	plugin manager
	plugin system
	canonicalization
	reference parsing
	import resolver
classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: Implementation :: CPython
	Programming Language :: Python :: Implementation :: PyPy
	Topic :: Software Development :: Libraries :: Python Modules
	Topic :: Utilities


[options]

packages = marrow.package
include_package_data = True
python_requires = >=3.5
zip_safe = False

setup_requires =
	setuptools-scm >= 1.7.0

install_requires =
	typeguard ~=2.3.0,<4.0

tests_require =
	pytest
	pytest-cov
	pytest-flakes
	pytest-isort
	pytest-mypy


[options.extras_require]

development =
	wheel
	bandit
	rope
	mypy
	pytest
	pytest-cov
	pytest-flakes
	pytest-isort
	pytest-runner
	pytest-mypy
	pre-commit
	ptipython
	e


[options.package_data]
* = *.txt, *.md, *.rst
marrow/package = py.typed


[options.entry_points]

marrow.package.sample =
	name = marrow.package:name
	load = marrow.package:load
	traverse = marrow.package:traverse


[check]

metadata = 1
strict = 1


[clean]

build-base = .packaging/build
bdist-base = .packaging/dist


[build]

build-base = .packaging/build
parallel = 3


[install]

optimize = 1


[sdist]

dist-dir = .packaging/release


[bdist]

bdist-base = .packaging/dist
dist-dir = .packaging/release


[bdist_wheel]

bdist-dir = .packaging/dist
dist-dir = .packaging/release


[wheel]

universal = 0


[mypy]

follow_imports = silent
ignore_missing_imports = True
strict_optional = True
warn_no_return = False
check_untyped_defs = True
allow_redefinition = True


[tool:isort]

line_length = 120
multi_line_output = 4
balanced_wrapping = True
indent='		'
sections = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER

known_first_party =
	marrow
	web


[tool:pytest]

addopts =
	-l -r fEsxw
	--flakes
	--cov-report term-missing
	--cov-report xml
	--no-cov-on-fail
	--cov marrow.package
	--durations=5
	--color=yes
	--isort
	--mypy
	test

filterwarnings =
	default
	ignore::DeprecationWarning:isort.*


[coverage:report]

exclude_lines =
	# Re-enable the standard pragma, since we override it.
	pragma: no( |-)?cov(er)?
	
	# Don't complain if non-runnable code isn't run:
	if 0:
	if False:
	if __name__ == .__main__.:
